# 380_project

./: .gitignore  CMakeLists.txt  README.md
Header Files/: base_class.h
Resource Files/: Task.cpp  base_class.cpp
Source Files/: main.cpp
include/: ActionItems.cpp  ActionItems.h  Decision.cpp  Decision.h  Deliverable.cpp  Deliverable.h  ID_Tracker.cpp  ID_Tracker.h  Issue.cpp  Issue.h  Requirement.cpp  Requirement.h  Resource.cpp  Resource.h  Risk.cpp  Risk.h  Skill.cpp  Skill.h  Task.cpp  Task.h  base_class.cpp  base_class.h
